Reduced media Queries, fixed alignleft + alignright

--- a/style.css
+++ b/style.css
@@ -92,7 +92,7 @@ html {
   @media (min-width: 651px) and (max-width: 900px) {
     html {
       font-size: 16px; } }
-  @media (min-width: 901px) {
+  @media (min-width: 901px) and (max-width: 1200px) {
     html {
       font-size: 16px; } }
   @media (min-width: 1201px) {
@@ -157,16 +157,7 @@ body {
         width: 13.0434782609%;
         float: right;
         margin-right: 0; } }
-    @media (min-width: 651px) and (max-width: 900px) {
-      .grid-overlay .col {
-        width: 6.3829787234%;
-        float: left;
-        margin-right: 2.1276595745%; }
-        .grid-overlay .col:nth-child(12) {
-          width: 6.3829787234%;
-          float: right;
-          margin-right: 0; } }
-    @media (min-width: 901px) {
+    @media (min-width: 651px) {
       .grid-overlay .col {
         width: 6.3829787234%;
         float: left;
@@ -193,7 +184,7 @@ body {
   @media (min-width: 651px) and (max-width: 900px) {
     .wrapper {
       max-width: 940%; } }
-  @media (min-width: 901px) {
+  @media (min-width: 901px) and (max-width: 1200px) {
     .wrapper {
       max-width: 940%; } }
   @media (min-width: 651px) and (max-width: 900px) {
@@ -203,7 +194,7 @@ body {
   @media (min-width: 901px) {
     .wrapper {
       width: 85%;
-      max-width: 1200px;
+      max-width: 1300px;
       margin: 0 auto; } }
   .wrapper:before, .wrapper:after {
     content: "";
@@ -220,27 +211,17 @@ body {
   float: none;
   margin: 0 0 20px 0;
   display: block; }
-  @media (min-width: 651px) and (max-width: 900px) {
+  @media (min-width: 651px) {
     .alignleft {
-      float: left;
-      padding: 0 1.25rem 2.5rem 0; } }
-  @media (min-width: 901px) {
-    .alignleft {
-      float: left;
-      padding: 0 1.25rem 2.5rem 0; } }
+      float: left; } }
 
 .alignright {
   float: none;
   margin: 0 0 20px 0;
   display: block; }
-  @media (min-width: 651px) and (max-width: 900px) {
+  @media (min-width: 651px) {
     .alignright {
-      float: right;
-      padding: 0 0 2.5rem 1.25rem; } }
-  @media (min-width: 901px) {
-    .alignright {
-      float: right;
-      padding: 0 0 2.5rem 1.25rem; } }
+      float: right; } }
 
 .wp-caption {
   background: red; }
@@ -485,10 +466,7 @@ input[type="submit"] {
 .mobile-header {
   background: #03a7ff;
   *zoom: 1; }
-  @media (min-width: 651px) and (max-width: 900px) {
-    .mobile-header {
-      display: none; } }
-  @media (min-width: 901px) {
+  @media (min-width: 651px) {
     .mobile-header {
       display: none; } }
   .mobile-header:before, .mobile-header:after {
@@ -554,10 +532,7 @@ input[type="submit"] {
 .primary-nav {
   display: none;
   margin-bottom: 1.5rem; }
-  @media (min-width: 651px) and (max-width: 900px) {
-    .primary-nav {
-      display: block; } }
-  @media (min-width: 901px) {
+  @media (min-width: 651px) {
     .primary-nav {
       display: block; } }
 
@@ -677,12 +652,7 @@ input[type="submit"] {
 /*
  * All sidebar(s) style here
  */
-@media (min-width: 651px) and (max-width: 900px) {
-  .sidebar {
-    width: 23.4042553191%;
-    float: right;
-    margin-right: 0; } }
-@media (min-width: 901px) {
+@media (min-width: 651px) {
   .sidebar {
     width: 23.4042553191%;
     float: right;
