--- a/style/sass/_wordpress.scss
+++ b/style/sass/_wordpress.scss
@@ -9,16 +9,14 @@
 	float: none;
 	margin: 0 0 20px 0;
 	display: block;
-	@include at-breakpoint($tablet){ float: left; padding: 0 ($base_unit * 2) ($base_unit * 4) 0; }
-	@include at-breakpoint($desktop){ float: left; padding: 0 ($base_unit * 2) ($base_unit * 4) 0; }
+	@include at-breakpoint($tablet_up){ float: left;  }
 }
 
 .alignright{
 	float: none;
 	margin: 0 0 20px 0;
 	display: block;
-	@include at-breakpoint($tablet){ float: right; padding: 0 0 ($base_unit * 4) ($base_unit * 2); }
-	@include at-breakpoint($desktop){ float: right; padding: 0 0 ($base_unit * 4) ($base_unit * 2); }
+	@include at-breakpoint($tablet_up){ float: right;  }
 }
 
 .wp-caption{
